# ansa-api-mcp

./: pyproject.toml  start_sse.py
.codebuddy/skills/ansa-scripting/: SKILL.md
.codebuddy/skills/ansa-scripting/assets/: ansa_template.py  batchmesh_template.py  gui_template.py
.codebuddy/skills/ansa-scripting/references/: deck_constants.md  entity_types.md
ansa_tools/: __main__.py  generate_index.py  generate_keywords.py  mcp_server.py  parse_html.py
ansa_tools/txt_docs/: ansa.analysis_tools.txt  ansa.base.checks.general.txt  ansa.base.checks.geometry.txt  ansa.base.checks.mesh.txt  ansa.base.checks.penetration.txt  ansa.base.checks.txt  ansa.base.txt  ansa.batchmesh.txt  ansa.betascript.txt  ansa.cad.txt  ansa.calc.txt  ansa.connections.txt  ansa.constants.txt  ansa.dm.txt  ansa.kinetics.txt  ansa.mesh.txt  ansa.morph.txt  ansa.report.txt  ansa.session.txt  ansa.spdrm.process.txt  ansa.spdrm.txt  ansa.taskmanager.txt  ansa.txt  ansa.utils.txt  ansa.vr.txt  ansa_api.txt
